// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`carousel Basic 3 Slide <bolt-carousel> Renders 1`] = `
<bolt-carousel
  class="is-ready"
  style=""
>
  <!---->
  
      
      
  <div
    class="c-bolt-carousel c-bolt-carousel--initialized c-bolt-carousel--horizontal"
    style=""
  >
    
        
    <div
      class="c-bolt-carousel__wrapper"
      style=""
    >
      
          
      <!---->
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible swiper-slide-active"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible swiper-slide-next"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <!---->
      
        
    </div>
    

        
        
              
    <div
      class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets"
      style=""
    >
      <span
        aria-label="Go to slide 1"
        class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
        role="button"
        style=""
        tabindex="0"
      />
    </div>
    
            
        
              
    <div
      class="c-bolt-carousel__scrollbar"
      style=""
    >
      <div
        class="c-bolt-carousel__scrollbar-drag"
        style="transform:translate3d(0px, 0px, 0px);width:785px;"
      />
    </div>
    
            
      
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
  </div>
  
    
  <!---->
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ 1 Slide Per View 1`] = `
<bolt-carousel
  class="is-ready"
  slides-per-view="1"
  style=""
>
  <!---->
  
      
      
  <div
    class="c-bolt-carousel c-bolt-carousel--initialized c-bolt-carousel--horizontal"
    style="cursor:grab;"
  >
    
        
    <div
      class="c-bolt-carousel__wrapper"
      style=""
    >
      
          
      <!---->
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible swiper-slide-active"
        style="width:784px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready swiper-slide-next"
        style="width:784px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:784px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <!---->
      
        
    </div>
    

        
              
    <div
      aria-disabled="true"
      aria-label="Previous slide"
      class="c-bolt-carousel__btn c-bolt-carousel__btn--previous c-bolt-carousel__btn--inside c-bolt-carousel__btn--disabled"
      role="button"
      style=""
      tabindex="0"
    >
      
                
      <!---->
      <!---->
      
              
    </div>
    
              
    <div
      aria-disabled="false"
      aria-label="Next slide"
      class="c-bolt-carousel__btn c-bolt-carousel__btn--next c-bolt-carousel__btn--inside"
      role="button"
      style=""
      tabindex="0"
    >
      
                
      <!---->
      <!---->
      
              
    </div>
    
            
        
              
    <div
      class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets"
      style=""
    >
      <span
        aria-label="Go to slide 1"
        class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 2"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 3"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
    </div>
    
            
        
              
    <div
      class="c-bolt-carousel__scrollbar"
      style=""
    >
      <div
        class="c-bolt-carousel__scrollbar-drag"
        style="width:255.158px;transform:translate3d(0px, 0px, 0px);"
      />
    </div>
    
            
      
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
  </div>
  
    
  <!---->
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ Nav Controls 1`] = `
<bolt-carousel
  class="is-ready"
  style=""
>
  <!---->
  
      
      
  <div
    class="c-bolt-carousel c-bolt-carousel--initialized c-bolt-carousel--horizontal"
    style=""
  >
    
        
    <div
      class="c-bolt-carousel__wrapper"
      style=""
    >
      
          
      <!---->
      <!---->
      
        
      <!---->
      
        
      <!---->
      
      
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible swiper-slide-active"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible swiper-slide-next"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <!---->
      
        
    </div>
    

        
        
              
    <div
      class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets"
      style=""
    >
      <span
        aria-label="Go to slide 1"
        class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
        role="button"
        style=""
        tabindex="0"
      />
    </div>
    
            
        
              
    <div
      class="c-bolt-carousel__scrollbar"
      style=""
    >
      <div
        class="c-bolt-carousel__scrollbar-drag"
        style="transform:translate3d(0px, 0px, 0px);width:785px;"
      />
    </div>
    
            
      
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
  </div>
  
    
  <!---->
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ Outer Nav Controls 1`] = `
<bolt-carousel
  class="is-ready"
  nav-position="outside"
  style=""
>
  <!---->
  
      
      
  <div
    class="c-bolt-carousel c-bolt-carousel--initialized c-bolt-carousel--horizontal"
    style=""
  >
    
        
    <div
      class="c-bolt-carousel__wrapper"
      style=""
    >
      
          
      <!---->
      <!---->
      
        
      <!---->
      
        
      <!---->
      
      
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible swiper-slide-active"
        style="width:216px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible swiper-slide-next"
        style="width:216px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible"
        style="width:216px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <!---->
      
        
    </div>
    

        
        
              
    <div
      class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets"
      style=""
    >
      <span
        aria-label="Go to slide 1"
        class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
        role="button"
        style=""
        tabindex="0"
      />
    </div>
    
            
        
              
    <div
      class="c-bolt-carousel__scrollbar"
      style="display:none;"
    >
      <div
        class="c-bolt-carousel__scrollbar-drag"
        style="transform:translate3d(0px, 0px, 0px);width:0px;"
      />
    </div>
    
            
      
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
  </div>
  
    
  <!---->
</bolt-carousel>
`;

exports[`carousel Basic 7 Slide <bolt-carousel> Renders 1`] = `
<bolt-carousel
  class="is-ready"
  style=""
>
  <!---->
  
      
      
  <div
    class="c-bolt-carousel c-bolt-carousel--initialized c-bolt-carousel--horizontal"
    style="cursor:grab;"
  >
    
        
    <div
      class="c-bolt-carousel__wrapper"
      style=""
    >
      
          
      <!---->
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible swiper-slide-active"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible swiper-slide-next"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 4
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 5
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 6
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:241.333px;margin-right:30px;"
      >
        <bolt-image
          alt="A Rock Climber"
          no-lazy=""
          ratio="1200/660"
          sizes="auto"
          src="/fixtures/1200x660.jpg"
          srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
          style="background-color:hsl(233, 33%, 97%);"
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 7
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <!---->
      
        
    </div>
    

        
              
    <div
      aria-disabled="true"
      aria-label="Previous slide"
      class="c-bolt-carousel__btn c-bolt-carousel__btn--previous c-bolt-carousel__btn--inside c-bolt-carousel__btn--disabled"
      role="button"
      style=""
      tabindex="0"
    >
      
                
      <!---->
      <!---->
      
              
    </div>
    
              
    <div
      aria-disabled="false"
      aria-label="Next slide"
      class="c-bolt-carousel__btn c-bolt-carousel__btn--next c-bolt-carousel__btn--inside"
      role="button"
      style=""
      tabindex="0"
    >
      
                
      <!---->
      <!---->
      
              
    </div>
    
            
        
              
    <div
      class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets"
      style=""
    >
      <span
        aria-label="Go to slide 1"
        class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 2"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 3"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 4"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 5"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
    </div>
    
            
        
              
    <div
      class="c-bolt-carousel__scrollbar"
      style=""
    >
      <div
        class="c-bolt-carousel__scrollbar-drag"
        style="width:329.23px;transform:translate3d(0px, 0px, 0px);"
      />
    </div>
    
            
      
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
  </div>
  
    
  <!---->
</bolt-carousel>
`;
